Added new route for metadata endpoint Minor modifications in README.md

--- a/config/.env_local
+++ b/config/.env_local
@@ -24,6 +24,9 @@ export DB_PASSWORD="root"
 export DB_NAME="dlt4edu"
 export DB_HOST="mysql"
 
+export API_USER="admin"
+export API_PASSWORD="bird"
+
 export ENMESHED_API_KEY="QYYuf13dzQNB1BEu0RqW"
 
 export ENMESHED_RELATIONSHIP_TEMPLATE_TOKEN="RLT41A0FhoamatoCmTXu"
